Added /Account and /Accounts to the REST API
